kube/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: climeat-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: climeat-api
  template:
    metadata:
      labels:
        app: climeat-api
    spec:
      containers:
      - name: climeat-api
        image: 593393184947.dkr.ecr.us-east-1.amazonaws.com/muspell:og14
        ports:
        - name: http-server
          containerPort: 8009
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
