kube/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: climeat-muspell-api
spec:
  type: ClusterIP
  selector:
    app: climeat-api
  ports:
  - name: http
    port: 8009
    targetPort: 8009
