kube/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: climeat-api-ingress
  labels:
    name: climeat-api-ingress
spec:
  rules:
    - host: climeat-api.safemoon.joshcorp.co
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: climeat-api
                port:
                  number: 8009
